--- a/garage.html
+++ b/garage.html
@@ -43,9 +43,9 @@
                     <a href="workshop.html" class="nav-item nav-link">Workshop</a>
                     <a href="garage.html" class="nav-item nav-link active">Garage</a>
                     <a href="stock.html" class="nav-item nav-link">Stock</a>
-                    <a href="#" class="nav-item nav-link">Orders</a>
+                    <a href="orders.html" class="nav-item nav-link">Orders</a>
                     <a href="branch.html" class="nav-item nav-link">Branches</a>
-                    <a href="#" class="nav-item nav-link">Reports</a>
+                    <a href="reports.html" class="nav-item nav-link">Reports</a>
                     <a href="requests.html" class="nav-item nav-link">Requests</a>
                     <a href="support.html" class="nav-item nav-link">Support</a>
                 </div>
@@ -89,7 +89,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">
+                                <a class="nav-link" href="orders.html">
                                     <span data-feather="shopping-cart"></span> Approved Requests Tracking
                                 </a>
                             </li>
@@ -99,7 +99,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">
+                                <a class="nav-link" href="reports.html">
                                     <span data-feather="bar-chart-2"></span> Reports
                                 </a>
                             </li>
