--- a/orders.html
+++ b/orders.html
@@ -152,8 +152,59 @@
                 </nav>
         
                 <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-
-
+                    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
+                        <div class="btn-toolbar mb-2 mb-md-0">
+                            <button class="btn btn-sm btn-outline-secondary">
+                                <span data-feather="calendar"></span> Real-Time View
+                            </button>
+                        </div>
+                    </div>
+                    <div class="card mb-3">
+                      <div class="card-header">
+                        <i class="fas fa-table"></i>
+                        Approved Requests Tracking</div>
+                      <div class="card-body">
+                        <div class="table-responsive">
+                          <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                            <thead>
+                             <tr>
+                                <th>Approved ID</th>
+                                <th>Handled By</th>
+                                <th>Cash Collection</th>
+                                <th>Expected Delivery</th>
+                                <th>Payment Method</th>
+                                <th>Invoice (if paid online)</th>
+                                <th>Receipt (after receiving)</th>
+                                <th>Candidate Hiring Approved</th>
+                                <th>Status</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr>
+                                <td>A-1000-678911</td>
+                                <td>Maintenance</td>
+                                <td>Yes</td>
+                                <td>2 days</td>
+                                <td>Direct</td>
+                                <th>N/A</th>
+                                <td></td>
+                                <td>N/A</td>
+                                <td>Yet to receive receipt from accounts</td>
+                              </tr>
+                              <tr>
+                                <td>A-1000-678908</td>
+                                <td>IT</td>
+                                <td>Yes</td>
+                                <td>3-4 days</td>
+                                <td>Online</td>
+                                <th>Yes</th>
+                                <td></td>
+                                <td>N/A</td>
+                                <td>Yet to receive receipt from accounts</td>
+                              </tr>
+                            </tbody>
+                        </table>
+                    </div></div></div>
                 </main>
             </div>
         </div>
