--- a/reports.html
+++ b/reports.html
@@ -152,7 +152,9 @@
                 </nav>
         
                 <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-
+                  <div class="container">
+                    <h1 class="display-4">General Reports</h1>
+                  </div>
 
                 </main>
             </div>
