--- a/requests.html
+++ b/requests.html
@@ -48,6 +48,7 @@
                     <a href="reports.html" class="nav-item nav-link">Reports</a>
                     <a href="requests.html" class="nav-item nav-link active">Requests</a>
                     <a href="support.html" class="nav-item nav-link">Support</a>
+                    <a href="profile.html" class="nav-item nav-link">Profile</a>
                 </div>
                 <div class="navbar-nav ml-auto">
                     <button class="btn btn-sm btn-outline-secondary">
@@ -114,7 +115,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">
+                                <a class="nav-link" href="profile.html">
                                     <span data-feather="users"></span> Profile
                                 </a>
                             </li>
