--- a/dashboard.html
+++ b/dashboard.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/dashboard2.css">
         <script src="https://www.chartjs.org/dist/2.8.0/Chart.min.js"></script>
-        <script src="https://www.chartjs.org/samples/latest/utils.js"></script>
+        <script src="js/chartjs_utils.js"></script>
         <style>
             canvas {
                 -moz-user-select: none;
